Added new Question Image View, new Answer Text View. Added new answer Buttons and changed Question Text_View

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,35 +11,68 @@
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
         android:textAlignment="center"
-        android:textSize="24sp" />
+        android:textSize="24sp"/>
+
+    <ImageView
+        android:id="@+id/question_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:contentDescription="@string/image_description" />
+
+    <TextView
+        android:id="@+id/answer_text_view"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:text="@string/answer1"/>
 
     <LinearLayout
-        android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
         <Button
-            android:id="@+id/true_button"
+            android:id="@+id/A_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button" />
+            android:text="@string/A_button"/>
 
         <Button
-            android:id="@+id/false_button"
+            android:id="@+id/B_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button" />
+            android:text="@string/B_button" />
+
+        <Button
+            android:id="@+id/C_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/C_button" />
+
+        <Button
+            android:id="@+id/D_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/D_button" />
     </LinearLayout>
 
-    <Button
-        android:layout_marginTop="45dp"
-        android:id="@+id/next_button"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next_button" />
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_button" />
+
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_button" />
+    </LinearLayout>
 
 </LinearLayout>
