--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,6 @@
         android:contentDescription="@string/image_description" />
 
     <TextView
-        android:id="@+id/answer_text_view"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -66,13 +65,15 @@
             android:id="@+id/prev_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button" />
+            android:text="@string/pev_button"
+            android:drawableLeft="@drawable/arrow_left"/>
 
         <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button" />
+            android:text="@string/next_button"
+            android:drawableRight="@drawable/arrow_right"/>
     </LinearLayout>
 
 </LinearLayout>
