--- a/app/src/main/res/values/questions.xml
+++ b/app/src/main/res/values/questions.xml
@@ -3,7 +3,5 @@
     <string name="question1">Вы намерены проехать перекресток прямо. Кому Вы обязаны уступить дорогу?</string>
     <string name="question2">⁠Разрешено ли Вам остановиться на мосту на этом месте?</string>
     <string name="question3">⁠Какие из указанных знаков разрешают движение грузовым автомобилям с массой не более 3,5 т?</string>
-    <string name="question4">Исток реки Нил в Египте</string>
-    <string name="question_americas">Река Амазонка самая большая река в Америке</string>
-    <string name="question_asia">Озеро Байкал самое древнее и самое глубокое в мире</string>
+    <string name="question4">На какой траектории вам разрешено поворачивать?</string>
 </resources>
